# sdk-backend-sdl

./: .gitmodules  CMakeLists.txt  Makefile  README.md  shipp.json
cmake/: assert.cmake  config.cmake
include/: trollworks-backend-sdl.hpp
include/trollworks-backend-sdl/: SDL.hpp  animator.hpp  assets.hpp  backend.hpp  components.hpp  logging.hpp
include/trollworks-backend-sdl/input/: actions.hpp  bindings.hpp  controls.hpp  manager.hpp  passthrough.hpp  state.hpp  ui.hpp
include/trollworks-backend-sdl/rendering/: camera.hpp  data.hpp  pipeline.hpp  system.hpp
src/: SDL.cpp  animator.cpp  assets.cpp  backend.cpp  components.cpp  logging.cpp
src/assets/: aseprite.cpp  main.cpp
src/input/: bindings.cpp  controls.cpp  manager.cpp  ui.cpp
src/rendering/: camera.cpp  data.cpp  system.cpp
src/rendering/pipeline/: add-node.cpp  animation-node.cpp  blend-node.cpp  color-node.cpp  main.cpp  mod-node.cpp  mul-node.cpp  sprite-node.cpp  texture-node.cpp
